--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@onwidget/astrowind",
-  "description": "A template to make your website using Astro + Tailwind CSS.",
-  "version": "0.9.9",
+  "description": "AstroWind: A free template using Astro 3.0 and Tailwind CSS. Astro starter theme.",
+  "version": "1.0.0-beta.6",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -12,41 +12,42 @@
     "format": "prettier -w .",
     "lint:eslint": "eslint . --ext .js,.ts,.astro"
   },
-  "devDependencies": {
-    "@astrojs/mdx": "^0.19.7",
-    "@astrojs/partytown": "^1.2.3",
-    "@astrojs/rss": "^2.4.4",
-    "@astrojs/sitemap": "^2.0.2",
-    "@astrojs/tailwind": "^4.0.0",
+  "dependencies": {
+    "@astrojs/rss": "^3.0.0",
+    "@astrojs/sitemap": "^3.0.0",
     "@astrolib/analytics": "^0.4.2",
-    "@astrolib/seo": "^0.6.0",
+    "@astrolib/seo": "^1.0.0-beta.4",
     "@fontsource-variable/inter": "^5.0.8",
-    "@iconify-json/flat-color-icons": "^1.1.7",
-    "@iconify-json/tabler": "^1.1.88",
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/lodash.merge": "^4.6.7",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "astro": "^2.10.12",
-    "astro-compress": "^2.0.14",
+    "astro": "^3.1.2",
     "astro-icon": "^1.0.0-next.2",
-    "eslint": "^8.47.0",
-    "eslint-plugin-astro": "^0.28.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "js-yaml": "^4.1.0",
-    "limax": "2.1.0",
+    "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
-    "mdast-util-to-string": "^4.0.0",
-    "prettier": "^3.0.2",
-    "prettier-plugin-astro": "^0.11.1",
-    "reading-time": "^1.5.0",
-    "svgo": "3.0.2",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6",
     "unpic": "^3.10.0"
   },
+  "devDependencies": {
+    "@astrojs/mdx": "^1.1.0",
+    "@astrojs/partytown": "^2.0.0",
+    "@astrojs/tailwind": "5.0.0",
+    "@iconify-json/flat-color-icons": "^1.1.7",
+    "@iconify-json/tabler": "^1.1.91",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/lodash.merge": "^4.6.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "astro-compress": "^2.0.15",
+    "eslint": "^8.49.0",
+    "eslint-plugin-astro": "^0.29.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "js-yaml": "^4.1.0",
+    "mdast-util-to-string": "^4.0.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.0",
+    "reading-time": "^1.5.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
+  },
   "engines": {
-    "node": ">=16.12.0"
+    "node": ">=18.14.1"
   }
 }
